--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@tanstack/react-query": "^5.90.16",
+    "axios": "^1.13.2",
     "next": "14.2.35",
     "react": "^18",
     "react-dom": "^18",
